# ChangeLog for profile directory
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.8347 2013/11/11 16:23:24 axs Exp $
#
# This ChangeLog should include records for all changes in profiles directory.
# Only typo fixes which don't affect portage/repoman behaviour could be avoided
# here. If in doubt put a record here!

  11 Nov 2013; Ian Stakenvicius <axs@gentoo.org> package.mask:
  dropped mask to mozplugger now that it has been removed

  11 Nov 2013; Ben de Groot <yngwin@gentoo.org> package.mask:
  Mask older roboto versions

  10 Nov 2013; Markos Chandras <hwoarang@gentoo.org>
  default/linux/package.use.mask:
  Mask media-video/rtmpdump[polarssl]. It does not build with the current
  net-libs/polarssl in the tree

  10 Nov 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  package.mask:
  Mask prerelease xorg-server

  10 Nov 2013; Thomas Kahle <tomka@gentoo.org> package.mask:
  remove dev-games/gigi entry 'cause it's gone

  09 Nov 2013; Pawel Hajdan jr <phajdan.jr@gentoo.org> package.mask:
  Mask sci-geosciences/osgearth for removal in 30 days, bug #484786.

  06 Nov 2013; Pacho Ramos <pacho@gentoo.org> arch/x86/package.use.mask:
  Keywords recovered

  05 Nov 2013; Stanislav Ochotnicky <sochotnicky@gentoo.org> package.mask:
  Mask =media-sounds/beets-1.3.1 for testing

  04 Nov 2013; Sergey Popov <pinkbyte@gentoo.org> package.mask:
  Mask sys-apps/pcfclock, wrt bug #489510

  04 Nov 2013; Mike Gilbert <floppym@gentoo.org> package.mask:
  Remove unifont mask since we now work around the problem in the grub ebuild.

  04 Nov 2013; Jeroen Roovers <jer@gentoo.org> package.mask:
  Unmask app-admin/sysstat-10.2.0.

  03 Nov 2013; Robin H. Johnson <robbat2@gentoo.org> package.mask:
  Mask app-emulation/qenv for treecleaning, doesn't build, qemu changed too
  much.

  03 Nov 2013; Luca Barbato <lu_zero@gentoo.org> package.mask:
  Add a libav-0.8.9 multilib-ready version.
