@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile configure install postinst postrm preinst prepare setup test
-DEPEND=>=app-accessibility/speech-dispatcher-0.8:= app-arch/bzip2:= app-arch/snappy:= system-sqlite? ( dev-db/sqlite:3 ) cups? ( dev-libs/libgcrypt:= >=net-print/cups-1.3.11:= ) >=dev-libs/elfutils-0.149 dev-libs/expat:= >=dev-libs/icu-49.1.1-r1:= >=dev-libs/jsoncpp-0.5.0-r1:= >=dev-libs/libevent-1.4.13:= dev-libs/libxml2:=[icu] dev-libs/libxslt:= dev-libs/nspr:= >=dev-libs/nss-3.12.3:= >=dev-libs/protobuf-2.5.0:= dev-libs/re2:= gnome? ( >=gnome-base/gconf-2.24.0:= ) gnome-keyring? ( >=gnome-base/gnome-keyring-2.28.2:= ) >=media-libs/alsa-lib-1.0.19:= media-libs/flac:= media-libs/harfbuzz:=[icu(+)] >=media-libs/libjpeg-turbo-1.2.0-r1:= media-libs/libpng:0= media-libs/opus:= media-libs/speex:= pulseaudio? ( media-sound/pulseaudio:= ) sys-apps/dbus:= sys-apps/pciutils:= sys-libs/zlib:=[minizip] virtual/udev x11-libs/gtk+:2= x11-libs/libXinerama:= x11-libs/libXScrnSaver:= x11-libs/libXtst:= kerberos? ( virtual/krb5 ) selinux? ( sec-policy/selinux-chromium ) || ( >=dev-lang/python-2.7.5-r2:2.7 >=dev-lang/python-2.6.8-r3:2.6 ) !arm? ( dev-lang/yasm ) dev-lang/perl dev-perl/JSON >=dev-python/jinja-2.7 dev-python/ply dev-python/simplejson >=dev-util/gperf-3.0.3 dev-util/ninja sys-apps/hwids >=sys-devel/bison-2.4.3 sys-devel/flex virtual/pkgconfig test? ( dev-libs/openssl:0 dev-python/pyftpdlib ) >=sys-apps/sed-4 test? ( !prefix? ( x11-base/xorg-server[xvfb] ) x11-apps/xhost )
-DESCRIPTION=Open-source version of Google Chrome web browser
-EAPI=5
-HOMEPAGE=http://chromium.org/
-IUSE=bindist cups gnome gnome-keyring kerberos neon pulseaudio selinux system-sqlite tcmalloc custom-cflags +linguas_am +linguas_ar +linguas_bg +linguas_bn +linguas_ca +linguas_cs +linguas_da +linguas_de +linguas_el +linguas_en_GB +linguas_es +linguas_es_LA +linguas_et +linguas_fa +linguas_fi +linguas_fil +linguas_fr +linguas_gu +linguas_he +linguas_hi +linguas_hr +linguas_hu +linguas_id +linguas_it +linguas_ja +linguas_kn +linguas_ko +linguas_lt +linguas_lv +linguas_ml +linguas_mr +linguas_ms +linguas_nb +linguas_nl +linguas_pl +linguas_pt_BR +linguas_pt_PT +linguas_ro +linguas_ru +linguas_sk +linguas_sl +linguas_sr +linguas_sv +linguas_sw +linguas_ta +linguas_te +linguas_th +linguas_tr +linguas_uk +linguas_vi +linguas_zh_CN +linguas_zh_TW test
-KEYWORDS=~amd64 ~arm ~x86
-LICENSE=BSD
-RDEPEND=>=app-accessibility/speech-dispatcher-0.8:= app-arch/bzip2:= app-arch/snappy:= system-sqlite? ( dev-db/sqlite:3 ) cups? ( dev-libs/libgcrypt:= >=net-print/cups-1.3.11:= ) >=dev-libs/elfutils-0.149 dev-libs/expat:= >=dev-libs/icu-49.1.1-r1:= >=dev-libs/jsoncpp-0.5.0-r1:= >=dev-libs/libevent-1.4.13:= dev-libs/libxml2:=[icu] dev-libs/libxslt:= dev-libs/nspr:= >=dev-libs/nss-3.12.3:= >=dev-libs/protobuf-2.5.0:= dev-libs/re2:= gnome? ( >=gnome-base/gconf-2.24.0:= ) gnome-keyring? ( >=gnome-base/gnome-keyring-2.28.2:= ) >=media-libs/alsa-lib-1.0.19:= media-libs/flac:= media-libs/harfbuzz:=[icu(+)] >=media-libs/libjpeg-turbo-1.2.0-r1:= media-libs/libpng:0= media-libs/opus:= media-libs/speex:= pulseaudio? ( media-sound/pulseaudio:= ) sys-apps/dbus:= sys-apps/pciutils:= sys-libs/zlib:=[minizip] virtual/udev x11-libs/gtk+:2= x11-libs/libXinerama:= x11-libs/libXScrnSaver:= x11-libs/libXtst:= kerberos? ( virtual/krb5 ) selinux? ( sec-policy/selinux-chromium ) !=www-client/chromium-9999 x11-misc/xdg-utils virtual/ttf-fonts
-SLOT=0
-SRC_URI=https://commondatastorage.googleapis.com/chromium-browser-official/chromium-32.0.1678.0.tar.xz test? ( https://commondatastorage.googleapis.com/chromium-browser-official/chromium-32.0.1678.0-testdata.tar.xz )
-_eclasses_=chromium	cb805b418b1d27c585f6b2a3321d19ee	eutils	4878e7f88afc0ba0866ac112190b0fd4	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	65cef1287b9d62b1a0f180765d1e0c69	gnome2-utils	b66c7c3889d2dd0913e9f3d2ac1c0859	linux-info	a9cbd6bbe2b28166e403321882f3c73c	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	89580da5ec17ad687fcde876c542b91e	pax-utils	2424f959506320f5196de8f79fa05297	portability	536c5e70c5fb252ed3b769e04aa3f05b	python-any-r1	08d3455b23110d650f173ab0a090818b	python-utils-r1	49ee0ca5e1019d8f256a23692dad2642	readme.gentoo	2466b2f6a77a9600954c6b99ebca6e02	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=bc374885b2a45f5ea3e617b5b73a3a4e
