@@ -21,22 +21,22 @@ DIST chromium-31.0.1650.34-testdata.tar.xz 111204664 SHA256 93d351d37740ed1f5133
 DIST chromium-31.0.1650.34.tar.xz 174494132 SHA256 b83dbb7628c4ba7d81bc2496e85946cb2f5bc12ec4b12c4827b8b204ee9ee330 SHA512 70af5a04e2fe13557fa69d9d139fdd773b46f56766ba298f79b38b090795b5975667b818aca37ab08e7089fa3fd35708be6b95b9b0a1ebc057a794cce1f59d88 WHIRLPOOL 3e52561edfefd1d2ba3eba19ef5603b685db9449a161a6760032bca81c89b1a9fc9d4367d27dbfc16431b6529d29840f48ee0e9cc3354d7e0e40744ca947c406
 DIST chromium-31.0.1650.39-testdata.tar.xz 111208312 SHA256 b74d1a2eb5b90c3070dc12e5ca4f43f02156149186c9e6fc12256d77d672a5b6 SHA512 97aad6eab2bee2cb3c0afe8320c4105814c5abea13e977f05830050726f76bcd7fd186e39aea84e338b0a1840f924d048434acf34ba1884657f42fcc869d6769 WHIRLPOOL 1ba3231b0b05ec401bbe7d8777cbdc3b6fd64849503a9c0e53ea670b0341ec77c868decf79e276a8464ecea12f922b67398da1dc7d1b1e76ee07cb4406c1ff0d
 DIST chromium-31.0.1650.39.tar.xz 174518600 SHA256 d78d36b23663c80582945f3fbdf80dd67f15a6e12004b76de9f972bd0640dc0d SHA512 459058932fa8025327beccaf0e0f836913fca3acd01f90fff7b43666a56ac8249ccb86f339edf717dde2db98198398d9bdfa80824e194a934e3e2495d623d271 WHIRLPOOL 13f27b19b8e193cba5c6156c39a029de6d4af71cd59293a005cf6d34a614dde4c37e05ba0cf9397f85ab1371493365471656d0d77d06b1adc7a8c175a73379f9
-DIST chromium-32.0.1678.0-testdata.tar.xz 111230000 SHA256 7d0db093c58703dce8d92e2cea2640950f145fb7d797d3964ea15f408b7af315 SHA512 b3b3b72c73a4ea2e336dac95d4f84999cb67a5a2f6c0f85b18a36499ba016d3ad2182faec4d3ab8740ddbf50cb57f9e55894a2cd50920e185a8628dc3459a12f WHIRLPOOL d1af24753372d3d717686c1e9c258eaa466b9f6ea7921f0db1ca50e1277c520cf2e891bb776f6cb1d07e81a6c9ff3d2a03ad5aebc55600b9b940eecb25d05a98
-DIST chromium-32.0.1678.0.tar.xz 175914956 SHA256 51efe179c2d8c2b0d051e44a7b41ac35c8f4abd0ed9967cd3dcb9189824f95e5 SHA512 74c0e2cf62b04934bfdfa8f0653318cb5ce5b4a2ca1b7fe730345d3d3a7bc968795d0d90f59b12a7975e9cc5260a3b4dbc65a1d6235b118961b483d7a44e9ac8 WHIRLPOOL 245a711d923ab52cd933d8d33c06a62971c834a856a8bd6cf2df8a7079e28a6ad52b3db19bc246c8d2d850cfd9016e59a91bbb40a2a457b0cfe26887df13879b
 DIST chromium-32.0.1700.2-testdata.tar.xz 112075752 SHA256 8d04ee90e9d368dd36ce132a0886232ecbea04a31666be17bd84e41179661383 SHA512 7cd7e0f1f9baa21378d854617e00020028802dced12245f21a530cbcf876f7353403d096d0ecc4c9b1bdf63a9685077cfab9bdbeb3bdd41d219b14340d4612b9 WHIRLPOOL 3e776eb44154811da203d129e5fd027500fde4d55bb9cdc99606f20a7adc6575ebeb655ec75bddd0625354bf1a327bdf0955c379e27a302c135bf091bf190d40
 DIST chromium-32.0.1700.2.tar.xz 176957368 SHA256 4b05c9ac26af2af941e60b3ef3d4319b1e1c5e8a85ea3cd423d553cdd6d36f66 SHA512 a72e216a8fab5cf35ba59f151d2c91844912ea881a2521e08bba6ad2e4a1281425236e040af4fc5921d5be91e5de4f7e954d5105425048b206b5e3e933745536 WHIRLPOOL 4fa63f2ae3bc606c488c3da802078e6ad0ad16885cd24e42f6f42d208faee1961db877d325a70ef40e8564a7e6083b9ea69f6db8f02ccb14320ff2a51bd68c02
+DIST chromium-32.0.1700.6-testdata.tar.xz 112081404 SHA256 edce045b0d46a1ec480d5d42cc03ae8f2a3634e549f671b4a248b1c8d93f9263 SHA512 5f111cc4b5ecdf32912212a399e235be486127b3f3ceb118011c88a76bf757b1a091080784cb6ce761d1a22f94dff1a4ad1f800dfca2b88bbe277b56d01bc7c3 WHIRLPOOL 8fb98a46eccb30b525071c17627b29a6169c12df1d3fa0a53bfa6ab73857bfdd4b354ee328eed9955f0635e192df9373b1404969dfb2839981b0587269f25e88
+DIST chromium-32.0.1700.6.tar.xz 176963440 SHA256 cbd1bfc5bc1bc3f3f8d57828097bd7f4d2fdacb0658a140871af63bb705c0a2c SHA512 e6e0e1d60b44796d281bfd3210f4e363d5c80fb884cde7bd96375c2013a03dc3a5ce6087a41571320fe1c2c149232ca39980cf08e9f526698570a0cbaa6b66ea WHIRLPOOL 5045211ff518f13cdb2ff42b9f2e07ddcbb9885e9986e4e8b276ce75a7da414ffa94b502f764106ef0dd56f34a13b46bd84a32e8790dc9692712ef3f3dbec798
 EBUILD chromium-30.0.1599.101.ebuild 17422 SHA256 16d690b02f835cd696e3bb9c57da470e1ad32e7e7c0b2e2f13d1954663126bfe SHA512 a1b0ccbd722f1e22684ccaf703f2104537f4d53c83c643f1aa7e2ed7bdb721a4dc65de82c016564756403b44eb90b9d3972e1b40f3fde7a662509ffd9d929ba3 WHIRLPOOL 631cbb96125e2984d9dbd1f5f382ee612bf9e67e55fcebd46a26f975a4ebf0b7442ef2b243b2577d846bd09baf8df54744209d771e2ccb02655396361964ab29
 EBUILD chromium-31.0.1650.34.ebuild 17170 SHA256 87e4aed5ffd4eedff38e98dc66cff068a83a00569719eb5f2da14ba47364ab4f SHA512 6896973acc2f63af851782c9100bf56844893eda7b6474c8b09e17242606859238305e9a9e293419f0ff85f49cd295ea6336db4e8aa929ecaabe9fc795245d71 WHIRLPOOL 7f5706309b478da67c7d02d932beda982ac3bd70d2ac8a325ebeafd280fe6db39170e543fe90413e7fc3de6b629f8f9e2192a14afab9660517a58d1a9118cb2b
 EBUILD chromium-31.0.1650.39.ebuild 17170 SHA256 d98b151e5fad978bb23210beeadfccd290744e1a8255f0b34f412e7ca5623390 SHA512 eb8c1aac1916619b71465fb541b60991af4b7163d8045490229ba7cd0c34efebf8f51c908c3606ef4a3cb5b52e2342536f7dfb0cd65edda4cf076841acb3b45d WHIRLPOOL ce4c8a2ca2c11fe38b654892a845fdb5bd69a1f8193fae89002c7e4759deea5061fa1861266901da83975a42dfc0ced47a7b954f6fed01767c178b0792c10f1e
-EBUILD chromium-32.0.1678.0.ebuild 17790 SHA256 6d6183f44adbb7f33fa80ab72eab159f1ff450d322351b9c2526a65c5dd7b69e SHA512 33ffb3239512c968864a0d4a1f072941cdb5751a1de4ee5f905ecd96dc187d5cff97aab53205f195344894c22829a5cc5cdb6c969fa862c8a43c69024ba49a26 WHIRLPOOL 9c06378949380006e8d6b1de579fa5012d309c5a19c367a397ef72d83b70f23032776ded2923b3f9dd7bacb1ca31f35456cba18222261de374cf006ed23ccbd6
 EBUILD chromium-32.0.1700.2.ebuild 17836 SHA256 d32d57715c9003d8f791de28365b22e564e7ba103c5c17767b582977239b4207 SHA512 77ee2f057279a1a59943978c14a917711ce61b67aa3b24acf8806451f77d52e45fe31d2893995c05b21787b5ab46f7f19eb4c9c68949cc154562e70d9a125501 WHIRLPOOL cda722cc3f032f2b52b028d11a20b63ff11fba83baf69b5daa5f5b451a41d2c1a98b6df46149073216c03a45a95487497a1465dd551ee723adae184739fb4695
-MISC ChangeLog 87751 SHA256 0def06b00d2b3e40d76b6bf8685c2fba4b8df8070573f1b2cd73a39aa9fef940 SHA512 bc032f3e4112f1ed5b7d729d71300cee65331236b82aa240e13fe69d677c6a97c42a0943440211e257ee66cab4fb961d381f5753ef140860ca226ddfdad71cd6 WHIRLPOOL 06efc63627d07c6d26a671846f167b3708c0cc70d4fee49a8aa4dbc4b4757b470c2445e4520254ba00ea287154cde58d90dd6e020706407939c5e7daff069e4d
+EBUILD chromium-32.0.1700.6.ebuild 17836 SHA256 4a16e31078ce98151830e151f45cf156e63d530e4b17ef8fc0ed341ca95eb61c SHA512 ab7d8e8050576219585ec18662a3dab35c608f37fdae4cf264fcabba2dcadacb09f6225deb97d78c146a967a47aee832512dd1d0dfd59ae741e24a244725f6bb WHIRLPOOL 6be0b22ddd7c38fc3f3b5cd7c14026151432b3e4f8c2dae98cd94c8bc40fb2fbe4d595506c78fcb5a7e8dedbeeba9c0ea13fcf885a1e112eaf5c790a01a4316b
+MISC ChangeLog 87921 SHA256 e330311bd172b2d605fce383f52ad5b62def670403c9925f86e7a8481b175a4c SHA512 8fd9408447e2b96fa505d20a4ff6e6406aae6990fcb9e87918f4ed128c4ce0ea86dcdfd2b5f525271fcc5c2a75bbb8988179f7e0ffd3083b845d0ff15b77b940 WHIRLPOOL 08719d260122e71faacd9b7c641f539473ee3c589b8f23d3da0de03ab06d1007eaa609d5bd941166c37be33c19e38ad91dc86689679e6b369963ae1c04582e35
 MISC ChangeLog-2011 114031 SHA256 e2c2c75785c5eaf78b6efe01e357279cbb7be0c89d00b4053f475e963916fa54 SHA512 8e14759348333bdbd7c338080472789d7bbb1ece1ca5817bac6306bdcb33dda1e23bf3055cbb3b7bcee9362b6900bba1ace7ba73f353570a74d3ed761c9198cc WHIRLPOOL 810b6423c53f892a4b0964380b8190dec2a8783d560a9cb0baec93a77d879186201055382ca05975ae242e16728529ae85445db003fdd425355292d17817157b
 MISC metadata.xml 622 SHA256 0cc15c6cfce29d9372d650e883075630c844e262bb354a64c96d7e51580d25c9 SHA512 957d3b569ce2259d250681d91edf31d7dcea412d84c79017413866691d3b6fe27076f7d0d7c14f41421254438064d15c90d84940a3c6aa9c307c4db4277eadd1 WHIRLPOOL d621daeca803c0aa06b7abff6207a16cb9122c7ae6f7b02b57be88dd551ef4410fd20d592ea8ee7062bbef54ce09079dacd51e514febdebb16da24d8fb55f823
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlJ9E64ACgkQC77qH+pIQ6SQmQD/RVIYr/HQ7pDWEdHPJqCHJWoN
-4mqt1fFOEUN0fQMYUDMBAIxdXwuS6A39XoiV3/6OgRWd2pDKKc4y1daKqjM4LKM9
-=XFIt
+iF4EAREIAAYFAlKBjuEACgkQC77qH+pIQ6T1+AD+LM/S1+2UPvHryW/u/l3Z6zjT
+Ajn3lxKLwiXsWVMX6BMA/06sDqHWLYTPiJbY+XS2khddG9vzyfrMXSA/0TrFs1aL
+=+duZ
 -----END PGP SIGNATURE-----
