@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/chromium-32.0.1678.0.ebuild,v 1.1 2013/10/23 19:08:06 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/chromium-32.0.1700.6.ebuild,v 1.1 2013/11/12 02:13:49 floppym Exp $
 
 EAPI="5"
 PYTHON_COMPAT=( python{2_6,2_7} )
@@ -45,7 +45,7 @@ RDEPEND=">=app-accessibility/speech-dispatcher-0.8:=
 	dev-libs/libxml2:=[icu]
 	dev-libs/libxslt:=
 	dev-libs/nspr:=
-	>=dev-libs/nss-3.12.3:=
+	>=dev-libs/nss-3.14.3:=
 	>=dev-libs/protobuf-2.5.0:=
 	dev-libs/re2:=
 	gnome? ( >=gnome-base/gconf-2.24.0:= )
@@ -150,7 +150,8 @@ src_prepare() {
 	#	touch out/Release/gen/sdk/toolchain/linux_x86_newlib/stamp.untar || die
 	# fi
 
-	epatch "${FILESDIR}/${PN}-system-jinja-r1.patch"
+	epatch "${FILESDIR}/${PN}-system-jinja-r2.patch"
+	epatch "${FILESDIR}/${PN}-blink-crash-r0.patch"
 
 	epatch_user
 
