@@ -1,6 +1,12 @@
 # ChangeLog for www-client/chromium
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.974 2013/11/08 16:39:08 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.975 2013/11/12 02:13:49 floppym Exp $
+
+*chromium-32.0.1700.6 (12 Nov 2013)
+
+  12 Nov 2013; Mike Gilbert <floppym@gentoo.org> +chromium-32.0.1700.6.ebuild,
+  -chromium-32.0.1678.0.ebuild:
+  Beta channel bump.
 
   08 Nov 2013; Mike Gilbert <floppym@gentoo.org> chromium-30.0.1599.101.ebuild,
   chromium-31.0.1650.39.ebuild, chromium-32.0.1700.2.ebuild:
