@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.8347 2013/11/11 16:23:24 axs Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.8348 2013/11/12 02:17:54 floppym Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  12 Nov 2013; Mike Gilbert <floppym@gentoo.org> package.mask:
+  Update dev channel mask for chromium-33.
 
   11 Nov 2013; Ian Stakenvicius <axs@gentoo.org> package.mask:
   dropped mask to mozplugger now that it has been removed
